# parchmark-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/: INSTALL.md
src/parchmark_mcp/: __init__.py  client.py  models.py  server.py
tests/: __init__.py  test_client.py  test_models.py  test_server.py
